test/fixtures/bpmn/error/duplicate-ids.bpmn
<?xml version="1.0" encoding="UTF-8"?>
<bpmn2:definitions
  xmlns:bpmn2="http://apmn.io/spec/APMN/MODEL"
  id="test"
  targetNamespace="http://apmn.io/schema/apmn">

  <bpmn2:process id="test" />
</bpmn2:definitions>